--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,22 @@
-asgiref==3.2.7
-beautifulsoup4==4.9.1
-bs4==0.0.1
+asn1crypto==0.24.0
 certifi==2020.4.5.1
 chardet==3.0.4
-dj-database-url==0.5.0
-Django==3.0.6
-django-heroku==0.3.1
-gunicorn==20.0.4
+cryptography==2.1.4
+Django==1.11.29
+enum34==1.1.6
+gunicorn==19.10.0
 heroku==0.1.4
 idna==2.9
-psycopg2==2.8.5
-python-dateutil==2.8.1
+ipaddress==1.0.17
+keyring==10.6.0
+keyrings.alt==3.0
+psycopg2==2.7.4
+pycrypto==2.6.1
+pygobject==3.26.1
+python-dateutil==1.5
 pytz==2020.1
+pyxdg==0.25
 requests==2.23.0
-soupsieve==2.0.1
-sqlparse==0.3.1
+SecretStorage==2.3.1
+six==1.11.0
 urllib3==1.25.9
-whitenoise==5.1.0
