--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 asgiref==3.2.7
+asn1crypto==1.3.0
 beautifulsoup4==4.9.1
 bs4==0.0.1
 certifi==2020.4.5.1
+cffi==1.14.0
 chardet==3.0.4
+cryptography==2.9.2
 dj-database-url==0.5.0
 Django==3.0.6
 django-heroku==0.3.1
@@ -12,10 +15,14 @@ idna==2.9
 pkg-resources==0.0.0
 psycopg2==2.8.5
 pycairo==1.19.1
+pycparser==2.20
 PyGObject==3.36.1
+pyOpenSSL==19.1.0
+PySocks==1.7.1
 python-dateutil==1.5
 pytz==2020.1
 requests==2.23.0
+six==1.14.0
 soupsieve==2.0.1
 sqlparse==0.3.1
 urllib3==1.25.9
