--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 asn1crypto==0.24.0
-beautifulsoup4==4.8.0
-bs4==0.0.1
+beautifulsoup4==4.7.1
 certifi==2019.6.16
 cffi==1.12.3
 chardet==3.0.4
@@ -11,7 +10,9 @@ django-heroku==0.3.1
 gunicorn==19.9.0
 heroku==0.1.4
 idna==2.8
+postgres==2.2.2
 psycopg2==2.7.6.1
+psycopg2-binary==2.8.3
 pycparser==2.19
 pyOpenSSL==19.0.0
 PySocks==1.7.0
